Resolving some layout issues between input fields (#23)

--- a/css/global.css
+++ b/css/global.css
@@ -642,7 +642,17 @@ a:hover {
   text-align: right;
 }
 
-input,
+input[type=text],
+input[type=password],
+input[type=email],
+input[type=number],
+input[type=tel],
+input[type=url],
+input[type=date],
+input[type=search],
+input[type=datetime],
+input[type=time],
+input[type=date],
 select,
 textarea {
   border: 1px solid #e6e6e6;
@@ -846,7 +856,7 @@ input::placeholder {
 }
 
 @media (max-width: 600px) {
-  .form-horizontal .control-group label {
+  .form-horizontal .control-group > label {
     display: block;
     float: none;
     width: auto;
